--- a/views/user/course.hbs
+++ b/views/user/course.hbs
@@ -167,8 +167,8 @@ function initMap() {
 }
 </script>
 
-<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCc7Z9qrjj7BvLFdH4udf6HYIHJ488B28M&callback=initMap"async defer></script>
-{{#if message}}
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_W2QaRiFEj4HU-F_uyAlN2oUXKcBoPZw&callback=initMap"
+    async defer></script>{{#if message}}
 <script>
   alert('{{message}}');
 </script>
