--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -98,7 +98,7 @@ a:hover{
           </div>
           <div class="col-lg-6">
             <label for="institute_email">Institute Logo:</label>
-            <input type="file" name="image" class="form-control">
+            <input type="file" name="file" class="form-control">
           </div>
           </div>
           <div class="row">
